#4377 - Configure include and exclude patterns for logged events
- Treat an empty include patterns set as "include all"
- Bit of cleaning up